Fix T59293: Can't assign shortcut to undo history